[package]
name = "aglassoflemonade"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = {version = "0.4.40", features=["serde"]}
gloo-net = "0.6.0"
log = "0.4.27"
serde = "1.0.219"
wasm-bindgen-futures = "0.4.50"
wasm-logger = "0.2.0"
yew = {version = "0.21.0", features = ["csr"]}
yew-hooks = "0.3.3"
# yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = "0.18.0"
